@@ -1040,29 +1040,25 @@
                   a = 2;
                   b = 1;
                 } else {
-                  // assumes correct "an+b" format
-                  a = match[5].match(/^-/) ? -1 : match[5].match(/^n/) ? 1 : 0;
-                  a = a || ((n = match[5].match(/(-?\d{1,})n/)) ? parseInt(n[1], 10) : 0);
-                  b = 0 || ((n = match[5].match(/(-?\d{1,})$/)) ? parseInt(n[1], 10) : 0);
+                  // assumes correct "an+b" format, "b" before "a" to keep "n" values
+                  b = (n = match[5].match(/(-?\d{1,})$/)) ? parseInt(n[1], 10) : 0;
+                  a = (n = match[5].match(/(-?\d{0,})n/)) ? parseInt(n[1], 10) : 0;
+                  if (n && n[1] == '-') a = -1;
                 }
 
-                // shortcut check for of-type selectors
-                type = match[4] ? '[t]' : '';
-
                 // executed after the count is computed
-                expr = match[2] == 'last' ? 'n' + type + '.length-' + (b - 1) : b;
+                type = match[4] ? 'n[t]' : 'n';
+                expr = match[2] == 'last' ? type + '.length-' + (b - 1) : b;
 
-                test =
-                  b < 0 ?
-                    a <= 1 ?
-                      '<=' + Math.abs(b) :
-                      '%' + a + '===' + (a + b) :
-                  a > Math.abs(b) ? '%' + a + '===' + b :
-                  a === Math.abs(b) ? '%' + a + '===' + 0 :
-                  a === 0 ? '==' + expr :
-                  a < 0 ? '<=' + b :
-                  a > 0 ? '>=' + b :
-                    '';
+                // shortcut check for of-type selectors
+                type += '[e.CSS_ID]';
+
+                // build test expression out of structural pseudo (an+b) parameters
+                // see here: http://www.w3.org/TR/css3-selectors/#nth-child-pseudo 
+                test = b < 1 && a > 1 ? '(' + type + '-(' + b + '))%' + a + '==0' :
+                  a > +1 ? type + '>=' + b + '&&(' + type + '-(' + b + '))%' + a + '==0' :
+                  a < -1 ? type + '<=' + b + '&&(' + type + '-(' + b + '))%' + a + '==0' :
+                  a == 0 ? type + '==' + expr : a == -1 ? type + '<=' + b : type + '>=' + b;
 
                 // 4 cases: 1 (nth) x 4 (child, of-type, last-child, last-of-type)
                 source =
@@ -1070,7 +1066,7 @@
                     't=e.nodeName' + TO_UPPER_CASE +
                     ';n=s.getChildIndexes' + (match[4] ? 'ByTag' : '') +
                     '(e.parentNode' + (match[4] ? ',t' : '') + ');' +
-                    'if(n' + type + '[e.CSS_ID]' + test + '){' + source + '}' +
+                    'if(' + test + '){' + source + '}' +
                   '}';
 
               } else {
