@@ -1,3 +1,5 @@
+* Rewrite structural pseudo class resolver in the compiler to better match QSA behavior and results. [Diego Perini]
+
 * Ensure element.type exists before calling toLowerCase() on it for `:enabled` and `:disabled` pseudos. [jddalton]
 
 * Rename `NATIVE_QSAPI` to `NATIVE_QSA` and test for querySelectorAll() instead of querySelector(). [jddalton]
